--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Eugene Samonenko <esamonenko@agilevision.io>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.1",
     "@types/redux-immutable-state-invariant": "^2.1.1",
