--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
+  "main": "dist/dck-store.esm.js",
   "module": "dist/dck-store.esm.js",
   "types": "dist/index.d.ts",
   "author": "Eugene Samonenko <esamonenko@agilevision.io>",
@@ -34,13 +34,14 @@
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build": "tsdx build --format cjs,esm --name dck-store",
-    "dev": "tsdx watch  --format cjs,esm",
+    "build": "tsdx build --format esm --name dck-store",
+    "dev": "tsdx watch --format esm",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run build",
-    "test": "tsdx test"
+    "test": "tsdx test",
+    "test:coverage": "tsdx test --coverage"
   },
   "files": [
     "dist/*.js",
