--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ambroseus/dck-store",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Redux-based framework to get rid of CRUD-related boilerplate",
   "repository": "https://github.com/ambroseus/dck-store",
   "keywords": [
@@ -23,23 +23,19 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.1",
-    "@types/redux-immutable-state-invariant": "^2.1.1",
     "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
-    "rollup-plugin-strip-code": "^0.2.7",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2",
-    "typings-tester": "^0.3.2"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "build": "tsdx build --format esm --name dck-store",
-    "dev": "tsdx watch --format esm",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build",
+    "postinstall": "npm run lint && npm run format:check && npm test && npm run build",
     "test": "tsdx test",
     "test:coverage": "tsdx test --coverage"
   },
