--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "scripts": {
     "build": "tsdx build --format esm --name dck-store",
-    "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
-    "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
+    "format": "prettier --write \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src",
     "postinstall": "npm run lint && npm run format:check && npm test && npm run build",
     "test": "tsdx test",
