--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "noUnusedParameters": true,
     "outDir": "dist",
     "strict": true,
-    "target": "es2018"
+    "target": "es2018",
+    "baseUrl": "./src"
   },
   "include": ["src"],
-  "exclude": ["src/*.test.ts"]
+  "exclude": ["src/**/*.test.ts"]
 }
