--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "noUnusedParameters": true,
     "outDir": "dist",
     "strict": true,
-    "target": "es2018",
-    "baseUrl": "./src"
+    "target": "es2018"
   },
   "include": ["src"]
 }
