--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ambroseus/dck-store",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Redux-based framework to get rid of CRUD-related boilerplate",
   "repository": "https://github.com/ambroseus/dck-store",
   "keywords": [
@@ -10,7 +10,8 @@
     "redux-saga",
     "immer",
     "crud",
-    "toolkit"
+    "toolkit",
+    "ducks-pattern"
   ],
   "publishConfig": {
     "access": "public"
