--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "src"
   ],
   "dependencies": {
-    "@reduxjs/toolkit": "^1.0.4"
+    "@reduxjs/toolkit": "1.0.4",
+    "redux-saga": "1.1.3"
   },
   "sideEffects": false,
   "jest": {
