updated workflow names and badges

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build
 
 on: [push]
 
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - name: Upload coverage to Codecov  
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.codecov_token }}
