--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "build": "tsdx build --format esm --name dck-store",
     "format": "prettier --write \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
-    "lint": "tsdx lint src",
+    "lint": "tsdx lint src && tsc --noEmit",
     "postinstall": "npm run lint && npm run format:check && npm run test:coverage && npm run build",
     "test": "tsdx test",
     "test:coverage": "tsdx test --coverage"
