--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,4 +15,4 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.codecov_token }}
-          file: ./coverage/clover.xml
+          file: ./coverage/coverage-final.json
