--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
+      - run: |
+          npm ci
+          npm run build
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
