--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
       - name: npm ci && npm publish
         run: |
           npm ci
+          npm run build
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
