--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
+  "main": "dist/dck-store.esm.js",
   "module": "dist/dck-store.esm.js",
   "types": "dist/index.d.ts",
   "author": "Eugene Samonenko <esamonenko@agilevision.io>",
@@ -40,12 +40,8 @@
     "@reduxjs/toolkit": "1.0.4",
     "redux-saga": "1.1.3"
   },
-  "peerDependencies": {
-    "@reduxjs/toolkit": "1.0.4",
-    "redux-saga": "1.1.3"
-  },
   "scripts": {
-    "build": "tsdx build --format cjs,esm --name dck-store",
+    "build": "tsdx build --format esm --name dck-store",
     "format": "prettier --write \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src && tsc --noEmit",
@@ -54,9 +50,7 @@
     "test:coverage": "tsdx test --coverage"
   },
   "files": [
-    "dist/*.js",
-    "dist/*.js.map",
-    "dist/index.d.ts",
+    "dist",
     "src"
   ],
   "sideEffects": false,
