--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.1",
+    "@types/react-redux": "^7.1.5",
     "@types/redux-saga-tester": "1.0.1",
     "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.19.1",
@@ -38,6 +39,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.0.4",
+    "react-redux": "^7.1.3",
     "redux-saga": "1.1.3"
   },
   "scripts": {
