added hooks tests

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/node": "^12.12.1",
     "@types/react-redux": "^7.1.5",
     "@types/redux-saga-tester": "1.0.1",
+    "@testing-library/react": "^9.3.2",
     "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "redux-saga-tester": "^1.0.614",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
