--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "declaration": true,
+    "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
     "noUnusedLocals": true,
