--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dck-store.esm.js",
+  "main": "dist/index.js",
   "module": "dist/dck-store.esm.js",
   "types": "dist/index.d.ts",
   "author": "Eugene Samonenko <esamonenko@agilevision.io>",
@@ -34,7 +34,6 @@
     "@testing-library/react": "^9.3.2",
     "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "redux-saga-tester": "^1.0.614",
     "tsdx": "^0.11.0",
@@ -44,10 +43,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.0.4",
     "react-redux": "^7.1.3",
-    "redux-saga": "1.1.3"
+    "redux": "^4.0.4",
+    "redux-saga": "1.1.3",
+    "react": "^16.12.0"
   },
   "scripts": {
-    "build": "tsdx build --format esm --name dck-store",
+    "build": "tsdx build --format cjs,esm --name dck-store",
     "format": "prettier --write \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"src/**/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src && tsc --noEmit",
