--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "^9.3.2",
     "eslint-config-react-app": "^5.0.2",
     "prettier": "^1.19.1",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "redux-saga-tester": "^1.0.614",
     "tsdx": "^0.11.0",
@@ -44,8 +45,7 @@
     "@reduxjs/toolkit": "1.0.4",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-saga": "1.1.3",
-    "react": "^16.12.0"
+    "redux-saga": "1.1.3"
   },
   "scripts": {
     "build": "tsdx build --format esm --name dck-store",
